--- a/syllabus/ta/solarz.qmd
+++ b/syllabus/ta/solarz.qmd
@@ -2,6 +2,8 @@
 title: Solarz, Katie
 categories: 
   - Lab leader
+  - Lecture helper
+  - Head TA
 description: "Th 1:25PM - 2:40PM (Sec 7)"
 subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/solarz.jpg
