--- a/slides/01-meet-the-toolkit.qmd
+++ b/slides/01-meet-the-toolkit.qmd
@@ -4,6 +4,7 @@ subtitle: "Lecture 1"
 date: "2026-01-12"
 format: 
   revealjs: 
+    output-file: 01-meet-the-toolkit-slides.html
     footer: "[🔗 sta199-f26.github.io](https://sta199-f26.github.io/)"
     theme: slides.scss
     transition: fade
