--- a/lab/lab-1.qmd
+++ b/lab/lab-1.qmd
@@ -220,30 +220,41 @@ The variables in the dataset and their descriptions are as follows:
 
 ## Question 1
 
-a. How many counties are in the dataset? How many variables are there?
-Use inline code to answer this question.
+Make a well-labeled histogram of the `pop_2020` variable. 
 
 ::: render-commit-push
-Render, commit, and push your changes to GitHub with the commit message "Added answer for Q1a".
+Render, commit, and push your changes to GitHub with the commit message "Added answer for Q1".
 
 Make sure to commit and push all changed files so that your Git pane is empty afterward.
 :::
 
-b. Make two plots: a histogram and a boxplot of the `pop_2020` variable. 
+## Question 2
 
-- Is the distribution of population in NC counties right-skewed, left-skewed, or approximately symmetric? Which plot(s) helped you determine this?
-
-- Is the distribution of population in NC counties unimodal, bimodal, multimodal, or uniform? Which plot(s) helped you determine this?
+Make a well-labeled boxplot of the `pop_2020` variable. 
 
 ::: render-commit-push
-Render, commit, and push your changes to GitHub with the commit message "Added answer for Q1b".
+Render, commit, and push your changes to GitHub with the commit message "Added answer for Q2".
 
 Make sure to commit and push all changed files so that your Git pane is empty afterward.
 :::
 
-c. Make a scatter plot of population density (`density` on the y-axis) vs. land area in miles-squared (`land_area_mi2` on the x-axis). Make sure to set an informative title and axis labels for your plot.
+## Question 3
 
-- Describe the relationship.
+No code; just words:
+
+a. Is the distribution of population in NC counties right-skewed, left-skewed, or approximately symmetric? Which plot(s) helped you determine this?
+
+b. Is the distribution of population in NC counties unimodal, bimodal, multimodal, or uniform? Which plot(s) helped you determine this?
+
+::: render-commit-push
+Render, commit, and push your changes to GitHub with the commit message "Added answer for Q1".
+
+Make sure to commit and push all changed files so that your Git pane is empty afterward.
+:::
+
+## Question 4
+
+Make a scatter plot of population density (`density` on the y-axis) vs. land area in miles-squared (`land_area_mi2` on the x-axis). Make sure to set an informative title and axis labels for your plot. Then, describe the relationship.
 
 ::: render-commit-push
 Render, commit, and push your changes to GitHub with a triumphant commit message "Finished Lab 1!".
