--- a/slides/01-meet-the-toolkit.qmd
+++ b/slides/01-meet-the-toolkit.qmd
@@ -5,7 +5,7 @@ date: "2026-01-12"
 format: 
   revealjs: 
     output-file: 01-meet-the-toolkit-slides.html
-    footer: "[🔗 sta199-f26.github.io](https://sta199-f26.github.io/)"
+    footer: "[🔗 sta199-s26.github.io](https://sta199-s26.github.io/)"
     theme: slides.scss
     transition: fade
     slide-number: true
